# TubeScriber

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
modules/: database.py  scraper.py
tests/: test.py
